Added links to notes.

--- a/basicTestsTesche.html
+++ b/basicTestsTesche.html
@@ -8615,8 +8615,8 @@ There are probably some differences in naming, also, the TL there is oriented in
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="References:">References:<a class="anchor-link" href="#References:">¶</a></h1><p>[1] F. M. Tesche, C. M. Butler, “On the Addition of EM Field Propagation and Coupling Effects in the BLT Equation” , Carl Baum Notes, Interaction Notes, Note 588, June 2004.</p>
-<p>[2] N. Mora, et al., “Study and Classification of Potential IEMI Sources” , Carl Baum Notes, System Design and Assessment Notes, Note 41, July 2014.</p>
+<h1 id="References:">References:<a class="anchor-link" href="#References:">¶</a></h1><p>[1] F. M. Tesche, C. M. Butler, “On the Addition of EM Field Propagation and Coupling Effects in the BLT Equation” , Carl Baum Notes, Interaction Notes, Note 588, June 2004. Downloadable <a href="https://summa.unm.edu/notes/In/0588.pdf">here</a>.</p>
+<p>[2] N. Mora, et al., “Study and Classification of Potential IEMI Sources” , Carl Baum Notes, System Design and Assessment Notes, Note 41, July 2014. Downloadable <a href="https://summa.unm.edu/notes/SDAN/0041.pdf">here</a>.</p>
 </div>
 </div>
 </div>
